--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,18 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "firechat:build:production"
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a6c1b717-d8c8-4479-b371-b11eb71d2e61"
   }
 }
